@@ -82,26 +82,12 @@ public:
   virtual Scalar computeStandardRepresentative(const Point & s,
       const Point & t) const;
 
-  virtual Scalar computeStandardRepresentative(const Scalar & s,
-      const Scalar & t) const;
-
-  virtual Scalar computeStandardRepresentative(const Point & tau) const;
-
-  virtual Scalar computeStandardRepresentative(const Scalar & tau) const;
-
   // Special case for 1D model
-  virtual Scalar computeAsScalar (const Scalar s,
-                                  const Scalar t) const;
-
   virtual Scalar computeAsScalar (const Point & s,
                                   const Point & t) const;
 
   virtual CovarianceMatrix operator() (const Scalar tau) const;
   virtual CovarianceMatrix operator() (const Point & tau) const;
-
-  // Special case for 1D model
-  virtual Scalar computeAsScalar (const Scalar tau) const;
-  virtual Scalar computeAsScalar (const Point & tau) const;
 
   /** Gradient */
   virtual Matrix partialGradient(const Point & s,
