@@ -141,7 +141,7 @@ Available usages:
 
 Parameters
 ----------
-s, t : floats or sequences of float
+s, t : sequences of float
     Multivariate index :math:`(\vect{s}, \vect{t}) \in \cD \times \cD`
 tau : float or sequence of float
     Multivariate index :math:`\vect{\tau} \in \cD`
