@@ -17,6 +17,7 @@
  * Removed deprecated KarhunenLoeveP1Factory, KarhunenLoeveQuadratureFactory classes
  * Removed deprecated GramSchmidtAlgorithm, ChebychevAlgorithm classes
  * Removed [gs]etOptimizationSolver methods
+ * Removed CovarianceModel::compute{AsScalar,StandardRepresentative} overloads
 
 === Python module ===
 
